// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines/library/Darwin/libquery_engine-darwin.dylib.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses supplied library: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at custom-engines/library/Darwin/libquery_engine-darwin.dylib.node, resolved by PRISMA_QUERY_ENGINE_LIBRARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "libquery_engine-darwin.dylib.node",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true and Preview Feature, uses default library: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine-darwin.dylib.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "libquery_engine-darwin.dylib.node",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library PRISMA_FORCE_NAPI=true, uses default library: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine-darwin.dylib.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY and PRISMA_QUERY_ENGINE_BINARY, uses supplied binary for CLI and supplied library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at custom-engines/binary/Darwin/query-engine-darwin, resolved by PRISMA_QUERY_ENGINE_BINARY)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Library Preview Feature and PRISMA_QUERY_ENGINE_LIBRARY, uses default binary for CLI and supplied library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/.prisma/client @ 0 - env 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-darwin",
  "migration-engine-darwin",
  "package.json",
  "prisma-fmt-darwin",
  "query-engine-darwin",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine-darwin.dylib.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-darwin",
  "scripts",
]
`;

exports[`Library Preview Feature, uses default binary for CLI and default library for Client: version output @ 0 - env 1`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-darwin)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-darwin)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-darwin)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-darwin)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features     : nApi"
`;
